[frontend] Adjust sidebar z-index to prevent importer overlap

--- a/desktop/core/src/desktop/js/components/sidebar/sidebar.scss
+++ b/desktop/core/src/desktop/js/components/sidebar/sidebar.scss
@@ -236,7 +236,7 @@
   background-color: $sidebar-bg-color;
   overflow: hidden;
   width: 233px;
-  z-index: 2;
+  z-index: 1002;
   opacity: 0;
 
   // when displaying accordion items in a tooltip, they could overlaps the bottom of the page
@@ -341,7 +341,7 @@
   height: 80px;
   transform: rotate(339deg);
   transform-origin: 100% 0;
-  z-index: 1;
+  z-index: 1001;
 }
 
 .sidebar-sidebar-item-accordion-sub-item {
